# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/.

import("//express/components/ntp_background_images/buildflags/buildflags.gni")

brave_browser_ntp_background_images_sources = [
  "//express/browser/ntp_background_images/ntp_p3a_helper_impl.cc",
  "//express/browser/ntp_background_images/ntp_p3a_helper_impl.h",
  "//express/browser/ntp_background_images/ntp_tab_helper.cc",
  "//express/browser/ntp_background_images/ntp_tab_helper.h",
  "//express/browser/ntp_background_images/view_counter_service_factory.cc",
  "//express/browser/ntp_background_images/view_counter_service_factory.h",
]

brave_browser_ntp_background_images_deps = [
  "//base",
  "//express/browser:browser_process",
  "//express/browser/profiles:util",
  "//express/components/brave_ads/browser",
  "//express/components/brave_stats/browser",
  "//express/components/constants",
  "//express/components/ntp_background_images/browser",
  "//express/components/ntp_background_images/buildflags",
  "//express/components/ntp_background_images/common",
  "//express/components/p3a",
  "//express/components/p3a_utils",
  "//chrome/browser:browser_process",
  "//chrome/browser/profiles:profile",
  "//chrome/common",
  "//components/keyed_service/content",
  "//components/pref_registry",
  "//components/prefs",
  "//content/public/browser",
]

if (enable_custom_background) {
  brave_browser_ntp_background_images_deps +=
      [ "//express/browser/ntp_background_images:ntp_custom_background_images" ]
}

if (is_android) {
  brave_browser_ntp_background_images_sources += [
    "//express/browser/ntp_background_images/android/ntp_background_images_bridge.cc",
    "//express/browser/ntp_background_images/android/ntp_background_images_bridge.h",
  ]

  brave_browser_ntp_background_images_deps += [
    "//express/build/android:jni_headers",
    "//components/keyed_service/content",
    "//components/keyed_service/core",
  ]
}
