# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//express/components/speedreader/common/buildflags/buildflags.gni")

brave_browser_perf_sources = [
  "//express/browser/perf/brave_perf_features_processor.cc",
  "//express/browser/perf/brave_perf_features_processor.h",
  "//express/browser/perf/brave_perf_switches.cc",
  "//express/browser/perf/brave_perf_switches.h",
]

brave_browser_perf_deps = [
  "//base",
  "//express/components/brave_ads/core",
  "//express/components/brave_rewards/browser",
  "//express/components/brave_shields/browser",
  "//express/components/brave_shields/common/",
  "//components/prefs",
]

if (enable_speedreader) {
  brave_browser_perf_deps += [ "//express/components/speedreader" ]
}
