# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at http://mozilla.org/MPL/2.0/. */

import("//express/components/playlist/common/buildflags/buildflags.gni")

brave_browser_playlist_sources = []
brave_browser_playlist_deps = []

if (enable_playlist) {
  brave_browser_playlist_sources += [
    "//express/browser/playlist/playlist_service_factory.cc",
    "//express/browser/playlist/playlist_service_factory.h",
    "//express/browser/playlist/playlist_tab_helper.cc",
    "//express/browser/playlist/playlist_tab_helper.h",
    "//express/browser/playlist/playlist_tab_helper_observer.h",
  ]

  brave_browser_playlist_deps += [
    "//base",
    "//express/browser/profiles:util",
    "//express/components/playlist/browser",
    "//chrome/browser:browser_process",
    "//chrome/common",
    "//components/keyed_service/content",
    "//components/pref_registry:pref_registry",
  ]

  if (is_android) {
    brave_browser_playlist_sources += [
      "//express/browser/playlist/android/playlist_service_factory_android.cc",
    ]

    brave_browser_playlist_deps += [
      "//express/build/android:jni_headers",
      "//mojo/public/cpp/bindings",
    ]
  } else {
    brave_browser_playlist_sources += [
      "//express/browser/playlist/playlist_data_source.cc",
      "//express/browser/playlist/playlist_data_source.h",
    ]
  }
}
